--- a/style.css
+++ b/style.css
@@ -37,10 +37,6 @@ body {
     position: absolute;
 }
 
-<<<<<<< HEAD
-
-/************************************SCENE SLUT************************************/
-=======
 /************************************SCENE SLUT************************************/
 
 #valg1_container {
@@ -58,7 +54,7 @@ body {
     left: 68vw;
     position: absolute;
 }
->>>>>>> origin/master
+
 
 #valg1 {
   display: inline-block;
@@ -105,6 +101,7 @@ transform: translateY(4px);}
   background-color: #39899d;
   box-shadow: 0 5px #36707e;
     transform: translateY(4px);}
+
 /************************************BRUSER************************************/
 
 #bruser_container {
@@ -147,7 +144,7 @@ transform: translateY(4px);}
 /************************************OSKAR SPRITE************************************/
 
 #oskar_sprite {
-    background-image: url(media/oskar_asset_og_spritesheet+haandklaede_af+snakker+griner.svg);
+    background-image:url(media/oskar_spritesheet_endelig.svg);
     width: 26.66vw;
     height: 40.00vw;
     background-size: 2100%;
@@ -172,10 +169,10 @@ transform: translateY(4px);}
 
 @keyframes oskar_walkcycle_kf {
     0% {
-        background-position: 0% 20%;
+        background-position: 0% 16%;
     }
     100% {
-        background-position: -400% 20%;
+        background-position: -400% 16%;
     }
 }
 
@@ -192,10 +189,10 @@ transform: translateY(4px);}
 
 @keyframes oskar_ned_kf {
     0% {
-        background-position: 0% 40%;
+        background-position: 0% 34%;
     }
     100% {
-        background-position: -500% 40%;
+        background-position: -500% 34%;
     }
 }
 
@@ -213,15 +210,15 @@ transform: translateY(4px);}
 
 @keyframes oskar_up_kf {
     0% {
-        background-position: 0% 100%;
+        background-position: 0% 84%;
     }
     100% {
-        background-position: -2000% 100%;
+        background-position: -2000% 84%;
     }
 }
 
 .oskar_valg {
-    background-position: -2000% 100%;
+    background-position: -2000% 84%;
     transform: scaleX(-1);
 }
 
@@ -231,16 +228,18 @@ transform: translateY(4px);}
 .oskar_snak {
     animation-name: oskar_snak_kf;
     animation-duration: 3s;
-    animation-iteration-count: infinite;
+    animation-iteration-count: 1;
     animation-timing-function: steps(9);
 }
 
 @keyframes oskar_snak_kf {
     0% {
-        background-position: 0% 80%;
+        background-position: 0% 67%;
+        transform: scaleX(-1);
     }
     100% {
-        background-position: -900% 80%;
+        background-position: -900% 67%;
+        transform: scaleX(-1);
     }
 }
 
@@ -249,20 +248,29 @@ transform: translateY(4px);}
 
 .oskar_grin {
     animation-name: oskar_grin_kf;
-    animation-duration: 3s;
-    animation-iteration-count: infinite;
-    animation-timing-function: steps(8);
+    animation-duration: 1s;
+    animation-iteration-count: 1;
+    animation-timing-function: steps(4);
+    animation-fill-mode: both;
 }
 
 @keyframes oskar_grin_kf {
     0% {
-        background-position: 0% 60%;
+        background-position: 0% 100%;
+        transform: scaleX(-1);
     }
     100% {
-        background-position: -800% 60%;
+        background-position: -400% 100%;
+        transform: scaleX(-1);
     }
 }
 
+/******lettet******/
+
+.oskar_lettet{
+    background-position: -400% 100%;
+    transform: scaleX(-1);
+}
 
 /************************************OSKAR SPRITE SLUT************************************/
 
@@ -564,6 +572,7 @@ transform: translateY(4px);}
     animation-duration: 3s;
     animation-iteration-count: 1;
     animation-fill-mode: both;
+    animation-delay: 1.5s;
 }
 
 @keyframes dreng2_move_right_kf {
@@ -588,6 +597,10 @@ transform: translateY(4px);}
 #haand_container {
     position: absolute;
     overflow: hidden;
+}
+
+.foran_indhold {
+    z-index: 1;
 }
 
 .haand_ind_pose {
@@ -663,13 +676,15 @@ transform: translateY(4px);}
     background-size: 1100%;
 }
 
+
+
 .haand_rolig {
     background-position: 0% 0%;
 }
 
 .haand_tryk {
     animation-name: haand_tryk_kf;
-    animation-duration: 3s;
+    animation-duration: 1.5s;
     animation-iteration-count: 1;
     animation-timing-function: steps(11);
     animation-direction: alternate-reverse;
@@ -686,20 +701,39 @@ transform: translateY(4px);}
 }
 
 
+.haand_tryk_2 {
+    animation-name: haand_tryk_2_kf;
+    animation-duration: 1s;
+    animation-iteration-count: 1;
+    animation-timing-function: steps(3);
+    animation-direction: alternate-reverse;
+    animation-delay: 1s;
+}
+
+@keyframes haand_tryk_2_kf {
+    0% {
+        background-position: 0% 100%;
+    }
+    100% {
+        background-position: -300% 100%;
+    }
+}
+
+
 /************************************HÅND SLUT************************************/
 
 
 /************************************INDHOLD************************************/
 
 
-/*
+
 #indhold_container {
     position: absolute;
-    width: 17.5vw;
+    width: 18vw;
     height: 24vw;
     top: 42%;
-    left: 30.29%;
-    transform:rotateZ(2.8deg);
+    left: 30%;
+    transform: skewX(-4deg) rotateY(4deg);
     background-color: black;
 }
 
@@ -790,14 +824,22 @@ transform: translateY(4px);}
     position: absolute;
 }
 
+#billede_10 {
+    width: 5vw;
+    height: 5vw;
+    background-size: cover;
+    background-image:url(media/delete.jpg);
+    position: absolute;
+}
+
 .pos1 {
     top: 10%;
-    left: 0%;
+    left: 3%;
 }
 
 .pos2 {
     top: 10%;
-    left: 33%;
+    left: 34%;
 }
 
 .pos3 {
@@ -807,12 +849,12 @@ transform: translateY(4px);}
 
 .pos4 {
     top: 37%;
-    left: 0%;
+    left: 3%;
 }
 
 .pos5 {
     top: 37%;
-    left: 33%;
+    left: 34%;
 }
 
 .pos6 {
@@ -822,12 +864,12 @@ transform: translateY(4px);}
 
 .pos7 {
     top: 65%;
-    left: 0%;
+    left: 3%;
 }
 
 .pos8 {
     top: 65%;
-    left: 33%;
+    left: 34%;
 }
 
 .pos9 {
