--- a/style.css
+++ b/style.css
@@ -39,10 +39,36 @@ body {
 
 /************************************SCENE SLUT************************************/
 
+#text_container {
+    position: absolute;
+    z-index: 100;
+    top: 40%;
+    left: 25%;
+}
+
+#text {
+    background-color: #ff9219;
+    border: #ff9219;
+    color: white;
+    padding: 6px 8px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 3vw;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+    z-index: 3;
+    font-family: 'Roboto', sans-serif;
+    width: 50vw;
+    height: 10vw;
+    border-radius: 15px;
+}
+
+
 #valg1_container {
     width: auto;
     height: auto;
-    left:68vw;
+    left: 68vw;
     top: 32vw;
     position: absolute;
 }
@@ -57,50 +83,58 @@ body {
 
 
 #valg1 {
-  display: inline-block;
-  padding: 20px 8px;
-  font-size: 25px;
-  cursor: pointer;
-  text-align: center;
-  text-decoration: none;
-  outline: none;
-  color: #ffffff;
-  background-color: #ff9219;
-  border: none;
-  border-radius: 15px;
-  box-shadow: 0 5px rgb(116, 82, 43);
+    font-family: 'Roboto', sans-serif;
+    display: inline-block;
+    padding: 20px 8px;
+    font-size: 25px;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    outline: none;
+    color: #ffffff;
+    background-color: #ff9219;
+    border: none;
+    border-radius: 15px;
+    box-shadow: 0 5px rgb(116, 82, 43);
     font-weight: 500;
 }
 
-#valg1:hover {background-color: #d17816}
+#valg1:hover {
+    background-color: #d17816
+}
 
 #valg1:active {
-  background-color: #af630e;
-  box-shadow: 0 5px rgb(116, 82, 43);
-transform: translateY(4px);}
+    background-color: #af630e;
+    box-shadow: 0 5px rgb(116, 82, 43);
+    transform: translateY(4px);
+}
 
 
 #valg2 {
-  display: inline-block;
-  padding: 33px 12px;
-  font-size: 25px;
-  cursor: pointer;
-  text-align: center;
-  text-decoration: none;
-  outline: none;
-  color: #ffffff;
-  background-color: #5ecde8;
-  border: none;
-  border-radius: 15px;
-  box-shadow: 0 5px #36707e;
+    font-family: 'Roboto', sans-serif;
+    display: inline-block;
+    padding: 33px 12px;
+    font-size: 25px;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    outline: none;
+    color: #ffffff;
+    background-color: #5ecde8;
+    border: none;
+    border-radius: 15px;
+    box-shadow: 0 5px #36707e;
 }
 
-#valg2:hover {background-color: #44a7bf}
+#valg2:hover {
+    background-color: #44a7bf
+}
 
 #valg2:active {
-  background-color: #39899d;
-  box-shadow: 0 5px #36707e;
-    transform: translateY(4px);}
+    background-color: #39899d;
+    box-shadow: 0 5px #36707e;
+    transform: translateY(4px);
+}
 
 /************************************BRUSER************************************/
 
@@ -140,11 +174,10 @@ transform: translateY(4px);}
 
 /************************************BRUSER SLUT************************************/
 
-
 /************************************OSKAR SPRITE************************************/
 
 #oskar_sprite {
-    background-image:url(media/oskar_spritesheet_endelig.svg);
+    background-image: url(media/oskar_spritesheet_endelig.svg);
     width: 26.66vw;
     height: 40.00vw;
     background-size: 2100%;
@@ -181,7 +214,7 @@ transform: translateY(4px);}
 
 .oskar_ned {
     animation-name: oskar_ned_kf;
-    animation-duration: 2s;
+    animation-duration: 1s;
     animation-iteration-count: 1;
     animation-timing-function: steps(5);
     animation-fill-mode: both;
@@ -267,13 +300,12 @@ transform: translateY(4px);}
 
 /******lettet******/
 
-.oskar_lettet{
+.oskar_lettet {
     background-position: -400% 100%;
     transform: scaleX(-1);
 }
 
 /************************************OSKAR SPRITE SLUT************************************/
-
 
 /************************************OSKAR CONTAINER************************************/
 
@@ -314,7 +346,6 @@ transform: translateY(4px);}
 
 
 /************************************OSKAR CONTAINER SLUT************************************/
-
 
 /************************************DRENG1 SPRITE************************************/
 
@@ -401,7 +432,6 @@ transform: translateY(4px);}
 
 
 /************************************DRENG1 SPRITE SLUT************************************/
-
 
 /************************************DRENG1 CONTAINER************************************/
 
@@ -490,7 +520,6 @@ transform: translateY(4px);}
 
 /************************************DRENG1 CONTAINER SLUT************************************/
 
-
 /************************************DRENG2 SPRITE************************************/
 
 #dreng2_sprite {
@@ -557,7 +586,6 @@ transform: translateY(4px);}
 
 /************************************DRENG2 SPRITE SLUT************************************/
 
-
 /************************************DRENG2 CONTAINER************************************/
 
 #dreng2_container {
@@ -590,7 +618,6 @@ transform: translateY(4px);}
 
 
 /************************************DRENG2 CONTAINER SLUT************************************/
-
 
 /************************************HÅND************************************/
 
@@ -722,10 +749,7 @@ transform: translateY(4px);}
 
 /************************************HÅND SLUT************************************/
 
-
 /************************************INDHOLD************************************/
-
-
 
 #indhold_container {
     position: absolute;
@@ -751,84 +775,99 @@ transform: translateY(4px);}
     }
 }
 
+.pulse2 {
 
-#billede_1 {
+    animation: pulse_kf 0.5s infinite alternate linear;
+    animation-iteration-count: 5;
+}
+
+@keyframes pulse_kf {
+    0% {
+        transform: scale(1);
+    }
+    100% {
+        transform: scale(0.9);
+    }
+}
+
+
+.billede_1 {
     width: 5vw;
     height: 5vw;
     background-size: cover;
-    background-image:url(nudes/1.png);
+    background-image: url(nudes/1.png);
     position: absolute;
 }
 
-#billede_2 {
+.billede_2 {
     width: 5vw;
     height: 5vw;
     background-size: cover;
-    background-image:url(nudes/2.png);
+    background-image: url(nudes/2.png);
     position: absolute;
 }
 
-#billede_3 {
+.billede_3 {
     width: 5vw;
     height: 5vw;
     background-size: cover;
-    background-image:url(nudes/3.png);
+    background-image: url(nudes/3.png);
     position: absolute;
 }
 
-#billede_4 {
+.billede_4 {
     width: 5vw;
     height: 5vw;
     background-size: cover;
-    background-image:url(nudes/4.png);
+    background-image: url(nudes/4.png);
     position: absolute;
 }
 
-#billede_5 {
+.billede_5 {
     width: 5vw;
     height: 5vw;
     background-size: cover;
-    background-image:url(nudes/5.png);
+    background-image: url(nudes/5.png);
     position: absolute;
 }
 
-#billede_6 {
+.billede_6 {
     width: 5vw;
     height: 5vw;
     background-size: cover;
-    background-image:url(nudes/6.png);
+    background-image: url(nudes/6.png);
     position: absolute;
 }
 
-#billede_7 {
+.billede_7 {
     width: 5vw;
     height: 5vw;
     background-size: cover;
-    background-image:url(nudes/7.png);
+    background-image: url(nudes/7.png);
     position: absolute;
 }
 
-#billede_8 {
+.billede_8 {
     width: 5vw;
     height: 5vw;
     background-size: cover;
-    background-image:url(nudes/8.png);
+    background-image: url(nudes/8.png);
     position: absolute;
 }
 
-#billede_9 {
+.billede_9 {
     width: 5vw;
     height: 5vw;
     background-size: cover;
-    background-image:url(nudes/9.png);
+    background-image: url(nudes/9.png);
     position: absolute;
 }
 
-#billede_10 {
+.billede_10 {
     width: 5vw;
     height: 5vw;
     background-size: cover;
-    background-image:url(media/delete.jpg);
+    background-image: url(media/delete.jpg);
     position: absolute;
 }
 
@@ -859,7 +898,7 @@ transform: translateY(4px);}
 
 .pos6 {
     top: 37%;
-    left:  66%;
+    left: 66%;
 }
 
 .pos7 {
