--- a/style.css
+++ b/style.css
@@ -177,7 +177,7 @@ body {
 /************************************OSKAR SPRITE************************************/
 
 #oskar_sprite {
-    background-image:url(media/oskar_spritesheet_endelig.svg);
+    background-image:url(media/SVG/oskar_spritesheet_endelig.svg);
     width: 26.66vw;
     height: 40.00vw;
     background-size: 2100%;
@@ -249,6 +249,25 @@ body {
         background-position: -2000% 84%;
     }
 }
+
+
+.oskar_slet_nude {
+    animation-name: oskar_slet_nude_kf;
+    animation-duration: 0.1s;
+    animation-iteration-count: 1;
+}
+
+@keyframes oskar_slet_nude_kf {
+    0% {
+        background-position: -2000% 84%;
+    transform: scaleX(-1);
+    }
+    100% {
+        background-position: -2000% 84%;
+    transform: scaleX(-1);
+    }
+}
+
 
 .oskar_valg {
     background-position: -2000% 84%;
@@ -762,7 +781,6 @@ body {
 }
 
 .pulse {
-
     animation: pulse_kf 0.5s infinite alternate linear;
 }
 
@@ -778,7 +796,7 @@ body {
 .pulse2 {
 
     animation: pulse_kf 0.5s infinite alternate linear;
-    animation-iteration-count: 5;
+    animation-iteration-count: 3;
 }
 
 @keyframes pulse_kf {
