--- a/style.css
+++ b/style.css
@@ -13,16 +13,16 @@ body {
 #startskaerm {
     width: 100%;
     height: 100%;
-    background-image:url(start_skaerm.png);
+    background-image: url(start_skaerm.png);
     background-repeat: no-repeat;
     background-size: cover;
     position: absolute;
 }
 
-#slutskaerm{
+#slutskaerm {
     width: 100%;
     height: 100%;
-    background-image:url(slut_skaerm_final-01.png);
+    background-image: url(slut_skaerm_final-01.png);
     background-repeat: no-repeat;
     background-size: cover;
     position: absolute;
@@ -33,7 +33,7 @@ body {
 }
 
 
-    @keyframes slutskaerm_kf {
+@keyframes slutskaerm_kf {
     0% {
         background-position: 100%;
     }
@@ -43,8 +43,60 @@ body {
 }
 
 
+#god_slutning {
+    background-image: url(billeder_delt-01.svg);
+    position: absolute;
+    top: 40%;
+    left: 25%;
+}
+
+.god_slutning_billede {
+    background-image: url(billeder_delt-01.svg);
+    position: absolute;
+    top: 40%;
+    left: 25%;
+    animation-name: god_slutning_kf;
+    animation-duration: 2s;
+    animation-iteration-count: 1;
+}
+
+@keyframes god_slutning_kf {
+    0% {
+        background-position: 100%;
+    }
+    100% {
+        background-position: 100%;
+    }
+}
+
+#bad_slutning {
+    background-image: url(billeder_delt-01.svg);
+    position: absolute;
+    top: 40%;
+    left: 25%;
+}
+
+.bad_slutning_billede {
+    animation-name: bad_slutning_kf;
+    animation-duration: 2s;
+    animation-iteration-count: 1;
+}
+
+@keyframes bad_slutning_kf {
+    0% {
+        background-position: 100%;
+    }
+    100% {
+        background-position: 100%;
+    }
+}
+
+
+
+
+
 #link {
-    background-image:url(PrivatSnak_logo.svg);
+    background-image: url(PrivatSnak_logo.svg);
     width: 30vw;
     height: 25vw;
     background-repeat: no-repeat;
@@ -60,11 +112,11 @@ body {
 }
 
 #link:hover {
-   transform: scale(1.1);
+    transform: scale(1.1);
 }
 
 #link2 {
-    background-image:url(PrivatSnak_logo.svg);
+    background-image: url(PrivatSnak_logo.svg);
     width: 30vw;
     height: 25vw;
     background-repeat: no-repeat;
@@ -73,7 +125,7 @@ body {
 }
 
 #link2:hover {
-   transform: scale(1.1);
+    transform: scale(1.1);
 }
 
 #link2_container {
@@ -86,34 +138,35 @@ body {
 #start {
     font-family: 'Roboto', sans-serif;
     display: inline-block;
-    padding: 20px 80px;
+    padding: .5vw 6vw;
     font-size: 30px;
     cursor: pointer;
     text-align: center;
     text-decoration: none;
     outline: none;
     color: #ffffff;
-    background-color: #ff9219;
+    background-color: red;
     border: none;
     border-radius: 15px;
-    box-shadow: 0 5px rgb(116, 82, 43);
+    box-shadow: 0 5px #800404;
     font-weight: 500;
 }
 
 #start:hover {
-    background-color: #d17816
+    background-color: red;
+    transform: scale(1.1);
 }
 
 #start:active {
-    background-color: #af630e;
-    box-shadow: 0 5px rgb(116, 82, 43);
+    background-color: #c70000;
+    box-shadow: 0 5px #5f0000;
     transform: translateY(4px);
 }
 
 #start_container {
     width: auto;
     height: auto;
-    left:26vw;
+    left: 26vw;
     top: 20vw;
     position: absolute;
     z-index: 10;
@@ -194,8 +247,8 @@ body {
 #valg1 {
     font-family: 'Roboto', sans-serif;
     display: inline-block;
-    padding: 20px 8px;
-    font-size: 25px;
+    padding: 1.5vw 1.2vw;
+    font-size: 1.5em;
     cursor: pointer;
     text-align: center;
     text-decoration: none;
@@ -222,8 +275,8 @@ body {
 #valg2 {
     font-family: 'Roboto', sans-serif;
     display: inline-block;
-    padding: 33px 12px;
-    font-size: 25px;
+    padding: 3vw 1.5vw;
+    font-size: 1.5em;
     cursor: pointer;
     text-align: center;
     text-decoration: none;
@@ -286,7 +339,7 @@ body {
 /************************************OSKAR SPRITE************************************/
 
 #oskar_sprite {
-    background-image:url(media/SVG/oskar_spritesheet_endelig.svg);
+    background-image: url(media/SVG/oskar_spritesheet_endelig.svg);
     width: 26vw;
     height: 40.00vw;
     background-size: 2100%;
@@ -369,11 +422,11 @@ body {
 @keyframes oskar_slet_nude_kf {
     0% {
         background-position: -2000% 84%;
-    transform: scaleX(-1);
+        transform: scaleX(-1);
     }
     100% {
         background-position: -2000% 84%;
-    transform: scaleX(-1);
+        transform: scaleX(-1);
     }
 }
 
@@ -446,6 +499,7 @@ body {
         transform: scaleX(-1);
     }
 }
+
 /************************************OSKAR SPRITE SLUT************************************/
 
 /************************************OSKAR CONTAINER************************************/
@@ -1007,7 +1061,7 @@ body {
     width: 5vw;
     height: 5vw;
     background-size: cover;
-    background-image: url(media/delete.jpg);
+    background-image: url(media/delete.png);
     position: absolute;
 }
 
@@ -1015,7 +1069,7 @@ body {
     width: 5vw;
     height: 5vw;
     background-size: cover;
-    background-image:url(Asset%201.svg);
+    background-image: url(Asset%201.svg);
     position: absolute;
 }
 
