tilføjet js og html og css

--- a/style.css
+++ b/style.css
@@ -44,36 +44,39 @@ body {
 
 
 #god_slutning {
-    background-image: url(billeder_delt-01.svg);
+    width: 100%;
+    height: 100%;
+    background-image:url(slettet_skaerm-01.png);
+    background-repeat: no-repeat;
+    background-size: cover;
     position: absolute;
-    top: 40%;
-    left: 25%;
+
 }
 
 .god_slutning_billede {
-    background-image: url(billeder_delt-01.svg);
-    position: absolute;
-    top: 40%;
-    left: 25%;
     animation-name: god_slutning_kf;
     animation-duration: 2s;
     animation-iteration-count: 1;
 }
 
 @keyframes god_slutning_kf {
-    0% {
-        background-position: 100%;
+   0% {
+
+    transform: scale(1);
     }
     100% {
-        background-position: 100%;
+
+    transform: scale(1);
     }
 }
 
 #bad_slutning {
-    background-image: url(billeder_delt-01.svg);
+    width: 100%;
+    height: 100%;
+    background-image:url(billede_delt-01.png);
+    background-repeat: no-repeat;
+    background-size: cover;
     position: absolute;
-    top: 40%;
-    left: 25%;
 }
 
 .bad_slutning_billede {
@@ -84,10 +87,12 @@ body {
 
 @keyframes bad_slutning_kf {
     0% {
-        background-position: 100%;
+
+    transform: scale(1);
     }
     100% {
-        background-position: 100%;
+
+    transform: scale(1);
     }
 }
 
@@ -138,7 +143,7 @@ body {
 #start {
     font-family: 'Roboto', sans-serif;
     display: inline-block;
-    padding: .5vw 6vw;
+    padding: 1vw 8vw;
     font-size: 30px;
     cursor: pointer;
     text-align: center;
